Team page - padding adjustments. Headings no longer being slightly cropped by angled container.

--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -3,12 +3,10 @@
 .site-footer {
   position: relative;
   overflow: hidden;
-  margin-top: vars.$section-padding-mobile;
   padding: vars.$section-padding-mobile 0;
   background: vars.$black;
   color: vars.$white;
   @include vars.breakpoint(medium){
-    margin-top: vars.$section-padding;
     padding: vars.$section-padding 0;
   }
 
